Fixed issue with LanguageProvider.getKey for Enum and TitleBuider